# IR_camera

./: CMakeLists.txt  README.md  package.xml
lib/x64/: demo.sh
msg/: IRData.msg
src/: IR_camera.cpp  IR_rqt.cpp
