<?xml version="1.0"?>
<package format="2">
  <name>ir_camera</name>
  <version>0.1.0</version>
  <description>ROS 2 node for the IR camera using guideusb2livestream SDK</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
